Edit button action

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     <section class="container">
       <form id="my-form">
+        <input type="hidden" id="editUserId" name="editUserId" value="">
         <h1>Add User</h1>
         <div class="msg"></div>
         <div>
